package org.example;

public interface IdProvider {
	String provide();
}
