package org.example.cli;

public interface MenuCommand {
	void execute();
}
