package org.example.products;

public record ProductDto(String name, double price, String category) {
}
