package org.example.products;

public interface ProductSearchCriteria {
	boolean matches(Product product);
}
