package org.example.sales;

public record SellerDto(String name, double salary) {
}
