@startuml

package cli {
top to bottom direction
class Menu
interface MenuCommand
enum Option
class AddProductCommand
class AddSellerCommand
class CalculateCommissionCommand
class ListSellersCommand
class RegisterSaleCommand
class ShowCatalogCommand
class SearchCommand
class ConsoleUi


}
package services {
package products {
class Catalog
class Category
class CategorySearchCriteria
class NameContainsSearchCriteria
class Product
interface ProductSearchCriteria
class ProductDto

}

package sales {
class BasicCommissionRules
interface CommissionRules
class Sale
class Seller
class SellerDto
class SellerRegister
class SellerSalaries
class SellerSales
class SalesService
}

package util {
interface IdProvider
class UUIDProvider
class SequentialIdProvider
}

package store {
class StoreService
}
}

Catalog --> Product
Catalog ..> ProductSearchCriteria
CategorySearchCriteria --|> ProductSearchCriteria
NameContainsSearchCriteria --|> ProductSearchCriteria
Product --> Category
ProductSearchCriteria ..> Product
StoreService --> Catalog
StoreService --> IdProvider
StoreService ..> ProductDto


Sale --> Product
Sale --> Seller
SalesService --> CommissionRules
SellerRegister --> IdProvider
SellerRegister --> SellerSalaries
SellerRegister --> SellerSales
SalesService --> Catalog
SellerRegister ..> SellerDto
SalesService --> SellerRegister
SalesService --> Sale


SellerSalaries --> Seller
SellerSales --> Seller
SellerSales --> Sale
SellerSales ..> CommissionRules

UUIDProvider --|> IdProvider
SequentialIdProvider --|> IdProvider

AddProductCommand --|> MenuCommand
AddSellerCommand --|> MenuCommand
CalculateCommissionCommand --|> MenuCommand
ListSellersCommand --|> MenuCommand
RegisterSaleCommand --|> MenuCommand
ShowCatalogCommand --|> MenuCommand
SearchCommand --|> MenuCommand

AddProductCommand --> StoreService
AddSellerCommand --> SellerRegister
CalculateCommissionCommand --> SalesService
ListSellersCommand --> SellerRegister
RegisterSaleCommand --> SalesService
SearchCommand --> Catalog
SearchCommand --> ProductSearchCriteria
ShowCatalogCommand --> Catalog

MenuCommand --> ConsoleUi

Menu *-- MenuCommand
Menu *-- Option
Menu --> ConsoleUi
@enduml